Add: envio de objetos como parametros